<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <!--Card Image-->
        <ImageView
            android:id="@+id/iv_dog_image_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_with_dog"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <!--Title Text-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_card">

                    <TextView
                        android:id="@+id/tv_dog_title_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/title"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />
                </FrameLayout>
            </LinearLayout>

            <!--Button-->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@drawable/transparent_card"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/ib_share_details"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_share_variant_white_36dp"
                    android:contentDescription="@string/share_via" />
            </FrameLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp">

        <TextView
            android:id="@+id/tv_text_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_text"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/ll_call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_phone_forward_white_24dp"
                android:contentDescription="@string/call" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

