<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <!--Card Image-->
        <ImageView
            android:id="@+id/iv_dog_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/image_with_dog" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <!--Title Text-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_card">

                    <TextView
                        android:id="@+id/tv_dog_title_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/title"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />
                </FrameLayout>
            </LinearLayout>

            <!--Button-->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@drawable/transparent_card"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/ib_share"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_share_variant_white_36dp"
                    android:contentDescription="@string/share_via" />
            </FrameLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>